WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68103
[CSS3 Backgrounds and Borders] The center of a border-image tiles incorrectly.
https://bugs.webkit.org/show_bug.cgi?id=68103
Summary
[CSS3 Backgrounds and Borders] The center of a border-image tiles incorrectly.
Dave Hyatt
Reported
2011-09-14 12:33:54 PDT
The center of a border-image tiles incorrectly. It doesn't properly obey the repeat/stretch rules on the sides. Covered by many pixel results.
Attachments
Patch
(17.15 KB, patch)
2011-09-14 12:38 PDT
,
Dave Hyatt
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2011-09-14 12:38:25 PDT
Created
attachment 107375
[details]
Patch
Dave Hyatt
Comment 2
2011-09-14 12:38:36 PDT
Layout test changes too large to attach.
Dave Hyatt
Comment 3
2011-09-14 14:15:25 PDT
Landed in
r95121
. Other platforms will need to rebaseline pixel results.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug